fixed some sentences

--- a/5/5.md
+++ b/5/5.md
@@ -34,8 +34,18 @@ Since the mess is not a Python object. We need to deserialize it.
 Since `pickle.load` reads the pickled representation of an object from a file object we need to store the serialized output in a file. 
 
 
+When opening files in Python I always use a `with open() as` statement. 
+
+
+Unlike `open` **`with open as`** closes the file automatically so I think it's a bit convenient. 
+
+
+There are detailed explanations on `with open` vs `open` https://www.reddit.com/r/learnpython/comments/nfszml/with_open_vs_open_in_python/ and https://stackoverflow.com/questions/31334061/file-read-using-open-vs-with-open.
+
+
 Using the requests module can scrape the serialized data. For the previous levels I used **text** to get the content of the response, but 
 for this level I'll use [**content**](https://requests.readthedocs.io/en/latest/api/#requests.Response.content). 
+
 
 Content returns the response in a byte-string. 
 
@@ -74,9 +84,8 @@ Using a list-comprehension is a good option here.
 
 
 Then you get an ASCII art that looks like this.
-<br>
-<br>
-<br>
+
+
 ```
               #####                                                                      ##### 
                ####                                                                       #### 
@@ -100,14 +109,13 @@ Then you get an ASCII art that looks like this.
    ###    ##   ####     ####   ###########   ####     ####  ####     ####    ###    ##    #### 
       ###     ######    #####    ##    #### ######    ###########    #####      ###      ######
 ```
-<br>
-<br>
-<br>
+
+
 It looks like the word **`channel`**. 
-<br>
-<br>
+
+
 Changing the url from http://www.pythonchallenge.com/pc/def/peak.html not http://www.pythonchallenge.com/pc/def/channel.html takes you to level6. 
-<br>
-<br>
+
+
 IMO if you haven't used the `pickle` module it's hard to solve level 5 on your own, so if you're stuck for too long read solutions and try to learn. 
 I think it's a good idea to look at answers when you're stuck for too a long or don't have any ideas on how to approach the problem. 
