--- a/5/5.md
+++ b/5/5.md
@@ -118,4 +118,4 @@ Changing the url from http://www.pythonchallenge.com/pc/def/peak.html not http:/
 
 
 IMO if you haven't used the `pickle` module it's hard to solve level 5 on your own, so if you're stuck for too long read solutions and try to learn. 
-I think it's a good idea to look at answers when you're stuck for too a long or don't have any ideas on how to approach the problem. 
+I think it's a good idea to look at answers when you're stuck for too a long or can't think of any ideas on how to approach the problem. 
