fixed broken links

--- a/6/6.md
+++ b/6/6.md
@@ -109,7 +109,7 @@ comments.
 What should I do to collect comments? Does zipfiles have comments hidden?
 
 
-Python has a built-in module name [zipfile](https://docs.python.org/3/library/zipfile.html#zipfile.ZipFile.comment) to handle zip files. 
+Python has a built-in module name [zipfile](https://docs.python.org/3/library/zipfile.html) to handle zip files. 
 
 Using the zipfile module's [zipfile.ZipFile](https://docs.python.org/3/library/zipfile.html#zipfile.ZipFile) object you need to open a `.zip` file.
 
@@ -118,7 +118,7 @@ I decided to open `channel.zip` like this.
 
 
 ```python
-with zipfile.ZipFile("channel.zip", "r") as zipf:
+with zipfile.ZipFile("channel.zip", "r") as myzip:
 ```
 
 
@@ -127,7 +127,7 @@ From here we need to check if there's extra information in the `.txt` files insi
 
 `ZipFile.getinfo` returns a `ZipInfo` object. 
 
-[`ZipFile.comment`](https://docs.python.org/3/library/zipfile.html#zipfile.ZipFile.getinfo) is an attribute of the `ZipFile` object which gives you the comments associated with the zip file itself.
+[`ZipFile.comment`](https://docs.python.org/3/library/zipfile.html#zipfile.ZipFile.comment) is an attribute of the `ZipFile` object which gives you the comments associated with the zip file itself.
 
 
 `ZipFile.comment` returns `bytes` so I decided to change it to a `str`(unicode data). 
