added some more sentences

--- a/7/7.md
+++ b/7/7.md
@@ -33,7 +33,10 @@ pip install pillow
 ```
 
 
-**PILLOW** is actively in development and maintained by many people so  we'll use it to solve this level. You'll have to use the **PILLOW** module whenever there's a level that doesn't have any hints other than the image so heads up.
+**[PILLOW](https://pillow.readthedocs.io/en/stable/)** is actively in development and maintained by many people so  we'll use it to solve this level. You'll have to use the `PILLOW` module whenever there's a level that doesn't have any hints other than the image so heads up.
+
+
+You can use the `with open` to open files using the `Image.open` method for image files as well.
 
 
 ```python
@@ -63,7 +66,7 @@ Another interesting point was that the `grey strip` is exactly at the middle of 
 
 The height of the image is `95` so half of the height would be `47`. We only want the **int** part. 
 
-**[`Image.getpixel`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.getpixel)** returns you the pixel value at a certain position.  
+[`Image.getpixel`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.getpixel)** returns you the pixel value at a certain position.  
 
 ```python
 from PIL import Image
@@ -174,7 +177,7 @@ print(unique)
 All the elements in the unique values seem to be in the **ASCII** range which is 0~127
 
 
-Python [bytes](https://docs.python.org/3/library/stdtypes.html#bytes) convert iterables of **int**s  to a byte-string. 
+Python [bytes](https://docs.python.org/3/library/stdtypes.html#bytes) class convert iterables of **int**s  to a byte-string. `bytes` expects the integers to be in the range of `0~255`. 
 
 
 Most people would convert an iterable of `int`s to string using a `for` loops and a `chr` but I recommend using the built-in class `bytes` it's a much more neat and pythonic way to write code. 
