got rid of asterisks

--- a/7/7.md
+++ b/7/7.md
@@ -66,7 +66,7 @@ Another interesting point was that the `grey strip` is exactly at the middle of 
 
 The height of the image is `95` so half of the height would be `47`. We only want the **int** part. 
 
-[`Image.getpixel`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.getpixel)** returns you the pixel value at a certain position.  
+[`Image.getpixel`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.getpixel) returns you the pixel value at a certain position.  
 
 ```python
 from PIL import Image
