--- a/8/8.md
+++ b/8/8.md
@@ -32,7 +32,7 @@ For those who've never seen or used a **[bzip](https://en.wikipedia.org/wiki/Bzi
 Every file has a file format a special signature telling this is a certain file `bzip` files use **[BZh](https://en.wikipedia.org/wiki/Bzip2#File_format)** as the file header.
 
 
-Python provides a **[bz2](https://docs.python.org/3/library/bz2.html)** module for bzip compression and decompression. 
+Python provides a built-in **[bz2](https://docs.python.org/3/library/bz2.html)** module for bzip compression and decompression. 
 
 
 You can use **[bz2.decompress](https://docs.python.org/3/library/bz2.html#bz2.decompress)** to decompress bzip2 compressed data.
