--- a/8/8.md
+++ b/8/8.md
@@ -51,7 +51,7 @@ b'huge' b'file'
 Entering **huge** as the username and **file** as the password takes you to level9. It's the level that required user authentication.
 
 
-You can send the credentials in the standard HTTP Authorization header like this `http://www.huge:file@pythonchallenge.com/pc/return/good.html`
+You can send the credentials in the standard HTTP Authorization header like this `http://www.huge:file@pythonchallenge.com/pc/return/good.html`.
 
 
 To be honest I don't know how bzip compresses data. If you're interested reading [this](https://www.quora.com/What-is-a-Bzip2-process-How-is-it-performed) will be a nice start, for further information on bzip2 you should probably read articles or books by professionals that work on data compression. 
