changed order of words

--- a/10/10.md
+++ b/10/10.md
@@ -155,7 +155,7 @@ print(len(line))
 ```
 
 
-It's similar to the code before but `Pi Marillion` uses `sum` to count the repeated numbers and the **[walrus operator](https://docs.python.org/3/whatsnew/3.8.html#assignment-expressions)**.
+It's similar to the previous code but `Pi Marillion` uses `sum` to count the repeated numbers and the **[walrus operator](https://docs.python.org/3/whatsnew/3.8.html#assignment-expressions)**.
 
 
 Changing the URL from http://www.huge:file@pythonchallenge.com/pc/return/bull.html to http://www.huge:file@pythonchallenge.com/pc/return/5808.html takes you to the level 11.
