add fix bold link on odd

--- a/11/11.md
+++ b/11/11.md
@@ -147,7 +147,7 @@ odd.show()
 even.show()
 ```
 
-I get 2 files [odd.png](/11/odd.png) and **[this](/11/even.png)**. 
+I get 2 files **[odd.png](/11/odd.png)** and [even.png](/11/even.png)**. 
 
 
 The first file has the word `evil` written vaguely on it. 
