--- a/11/11.md
+++ b/11/11.md
@@ -125,7 +125,9 @@ It may sound a bit confusing but basically we're just splitting the image vertic
 **[Image.putpixel](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.putpixel)** modify the pixel value at a certain coordinate. 
 
 
- 
+I chose **560** as the width and height of the image because it was the mean value of [cave.jpg](/11/cave.jpg)'s `img.height`(640) and `img.weight`(480). 
+
+
 ```python
 from PIL import Image
 
