--- a/11/11.md
+++ b/11/11.md
@@ -95,20 +95,23 @@ What we want to do is split the pixels like this.
 
 1\. Group pixels where the `x` value is even
 
+
+```python
 (0,0)(2,0)
 (0,1)(2,1)
 (0,2)(2,2)
 (0,3)(2,3)
-
+```
 
 2\. Group pixels where the `x` value is odd 
 
 
+```python
 (1,0)(3,0)
 (1,1)(3,1) 
 (1,2)(3,2)
 (1,3)(3,3) 
-
+```
 
 Now the `4x4` grid has become a `4x2` grid. 
 
