added some comments

--- a/00/0.md
+++ b/00/0.md
@@ -14,7 +14,10 @@ The course explains Python in a pretty detailed manner for beginners.
 The Professor used [this book](https://www.amazon.com/Get-Programming-Learn-code-Python/dp/1617293784) for her lecture's in 2016. Not sure which textbook she's using in 2022 btw. 
 
 
-Each level usually requires you to use a certain module.
+You should try to read as many Python books as possible. I personally tink Python Challenge is for people who know Python code but just aren't familiar with using various modules and writing classes in Python. 
+
+
+Each level in Python Challenge usually requires you to use a certain module.
 
 ## Level 0
 
