tip of the level

--- a/13/13.md
+++ b/13/13.md
@@ -175,3 +175,6 @@ File "/home/pythonchallenge/13/13.py", line 15, in <module>
     raise BadGzipFile('Not a gzipped file (%r)' % magic)
 gzip.BadGzipFile: Not a gzipped file (b'\n\n')
 ```
+
+
+Tip of the level would be to check the python-challenge forum when you're stuck and can't do anything... 
