--- a/13/13.md
+++ b/13/13.md
@@ -1,6 +1,6 @@
 # Level 13
 
-This time an image of a [phone](/13/disprop.jpg) is given. It's hard to see households that have a phone that looks like that because nowadays everyone uses Iphones, Galaxy etc...
+This time an image of a [phone](/13/disprop.jpg) is given. It's hard to see households that have a phone that looks like the image given because nowadays everyone uses Iphones, Galaxy etc...
 
 
 The name of the image is `disprop.jpg`.
