changed some comments

--- a/15/15.md
+++ b/15/15.md
@@ -1,12 +1,15 @@
 # Level 15 
 
-A calendar **[screen15](/15/screen15.jpg)** is given. 
+A an image of calendar file named **[screen15](/15/screen15.jpg)** is given. 
 
 
-A circle is on the `26th` of January and it looks like the two of the hundredth and the tenth year is gone so only know that the year is `1**6`.
+A circle is on the `26'th` of January and it looks like  the hundredth and the tenth year is gone so only know that the year is `1**6`.
 
 
-The title of the HTML is `walk around`.
+The title of the HTML is `whom`.
+
+
+The title implies we need to find a person that's born on that date `January 26th 1**6`.
 
 
 The page source has some hints in HTML comment. 
@@ -27,19 +30,19 @@ html
 ```
 
 
-I wonder how it's going to be used to solve the level or will it even be used.
+I wonder how the second HTML comment is going to be used to solve the level. Or will the second hint even be used at all? I'm not sure.
 
 
-To get to the next level it looks like I need to check from 1006 to 1996 to check which years had `26th` as a monday.
+Anyways I need to check from 1006 to 1996 to check which years had `26th` as a monday.
 
 
-Python provides a built-in **[datetime](https://docs.python.org/3/library/datetime.html)** module that tells helps you deal with dates. 
+Python provides a built-in **[datetime](https://docs.python.org/3/library/datetime.html)** module that helps you deal with dates. 
 
 
 To check a certain date you can use the **[date](https://docs.python.org/3/library/datetime.html#datetime.date)** object the datetime module provides. 
 
 
-With the **[date.weekday](https://docs.python.org/3/library/datetime.html#datetime.date.weekday)** you can check if  `January 26th` is a monday or not.
+By using **[date.weekday](https://docs.python.org/3/library/datetime.html#datetime.date.weekday)** you can check if  `January 26th` is a monday or not.
 
 
 I wrote code like this. 
@@ -55,7 +58,7 @@ for year in range(1006,2006,10):
 **date.weekday** will return `0` if it's monday and `1` if it's tuesday ... etc 
 
 
-The years from `1006` to `1996` that had `January 26th` as a monday were the years below. 
+The years from `1006` to `1996` that had `January 26th` as a monday are the years below. 
 
 
 ```python 
@@ -72,7 +75,7 @@ The years from `1006` to `1996` that had `January 26th` as a monday were the yea
 ```
 
 
-The year we want is `1846`. I think you have to find out a person born on `1846 January 26th`. I searched google for people that are famous born on `1846 January 26th ` but couldn't find anyone that might be the answer. 
+The year we want is `1846`, then I searched google for famous people born on `1846 January 26th ` but couldn't find anyone that seemed to be the answer. 
 
 
 Hmm, It looks like I'm missing something. I'm probably not using one of the hints python-challenge gave me. 
@@ -84,7 +87,7 @@ Let's go back to the image of a calendar. You can see there are the calendars fo
 If you take a close look at the calendar for **[february](/15/february.png)** it has a 29th.
 
 
-If february has a 29th is a leap year. so we need to add a condition to check if the year is a leap year and that January 26th is a monday.
+If february has a 29th is a leap year. so we need to add a condition to check if the year is a leap year to our previous condition which checks if January 26th is a monday.
 
 
 Python provides a built-in module called **[calendar](https://docs.python.org/3/library/calendar.html)** for outputting calendars like the *nix `cal` command does.
@@ -115,7 +118,7 @@ The output of the code looks like below. Our previous answer `1876` has been eli
 1976
 ```
 
-The final answer seems to be finding the name of a person who was born on `January 26th 1756`.
+The final answer seems to be finding the name of a person born on `January 26th 1756`.
 
 
 When googling it says mozart's official birthday is January 27th. According to **[wikipedia](https://en.wikipedia.org/wiki/Wolfgang_Amadeus_Mozart)** Mozart was born on the 26th but was baptised a day after his birth day. so it's plausible to say his birthday is `January 26th 1756`.
