fixed ugly html comments

--- a/15/15.md
+++ b/15/15.md
@@ -15,8 +15,7 @@ The title implies we need to find a person that's born on that date `January 26t
 The page source has some hints in HTML comment. 
 
 
-```
-html 
+```html 
 <!-- he ain't the youngest, he is the second -->
 ```
 
@@ -24,8 +23,7 @@ html
 There's also an HTML comment that looks like this. 
 
 
-```
-html
+```html
 <!-- todo: buy flowers for tomorrow -->
 ```
 
