--- a/17/17.md
+++ b/17/17.md
@@ -1,7 +1,7 @@
 # Level 17 
 
 
-**[cookies.jpg](/17/cookies.jpg)** is given. If you look closely at the left bottom you can see it has a the same smaller image as level4.
+**[cookies.jpg](/17/cookies.jpg)** is given. If you look closely at the left bottom you can see it has a the same smaller image as [level4](/4/chainsaw.jpg).
 
 
 The title of the HTML is `eat?` so it definitely has something to do with cookies.
