added full code

--- a/17/17.md
+++ b/17/17.md
@@ -163,6 +163,9 @@ print(conn.phone("Leopold")) # 555-VIOLIN
 It says `no! i mean yes! but ../stuff/violin.php.`. Changing the URL to http://www.huge:file@pythonchallenge.com/pc/stuff/violin.php takes you to level18. 
 
 
+You can check out the full code [here](/17/17.py).
+
+
 I think level17 was a combination of a lot of the previous levels. It leveraged Level4 (for the busynothings), level8 (decompressing bzip data), level13 (using xml-rpc). The slight twist was that you had to URL-decode the string using `urllib`.
 
 
