changed spelling from ballons to balloons

--- a/17/17.md
+++ b/17/17.md
@@ -160,8 +160,46 @@ print(conn.phone("Leopold")) # 555-VIOLIN
 **555-VIOLIN** is what I got after calling Leopold. I need to get rid of the `555` because that's BS. Changing the URL to **[violin](http://www.huge:file@pythonchallenge.com/pc/return/violin.html)** takes me to another web page.
 
 
-It says `no! i mean yes! but ../stuff/violin.php.`. Changing the URL to http://www.huge:file@pythonchallenge.com/pc/stuff/violin.php takes you to level18. 
+It says `no! i mean yes! but ../stuff/violin.php.`. Changing the URL to http://www.huge:file@pythonchallenge.com/pc/stuff/violin.php takes you to another URL. LOL I thought it was level 18.
 
+
+I was stuck here for a while... Then I noticed we didn't use the part `"the flowers are on their way` in `call his father and inform him that "the flowers are on their way`. 
+
+For the busynothings we had to check the cookie values to get something meaningful maybe sending Leopold cookies that have `"the flowers are on their way"` might be our solution.
+
+
+So I sent a request with the cookie. 
+
+```python
+import requests 
+
+
+res=requests.get("http://www.pythonchallenge.com/pc/stuff/violin.php",cookies={"info":"the flowers are on their way"})
+print(res.text)
+
+
+# <html>
+# <head>
+#   <title>it's me. what do you want?</title>
+#   <link rel="stylesheet" type="text/css" href="../style.css">
+# </head>
+# <body>
+#         <br><br>
+#         <center><font color="gold">
+#         <img src="leopold.jpg" border="0"/>
+# <br><br>
+# oh well, don't you dare to forget the balloons.</font>
+# </body>
+# </html>
+```
+
+
+The 2 meaningful sentences in the response are `<title>it's me. what do you want?</title>` and `oh well, don't you dare to forget the balloons.</font>`.
+
+**balloons** seems like a possible answer. Changing the URL to **[balloons](http://www.huge:file@pythonchallenge.com/pc/return/balloons.html)** takes you to level18. 
+
+
+That last twist at the end was unexpected phew... 
 
 You can check out the full code [here](/17/17.py).
 
@@ -169,4 +207,4 @@ You can check out the full code [here](/17/17.py).
 I think level17 was a combination of a lot of the previous levels. It leveraged Level4 (for the busynothings), level8 (decompressing bzip data), level13 (using xml-rpc). The slight twist was that you had to URL-decode the string using `urllib`.
 
 
-I personally thought this level wasn't that hard compared to level14 and level16. I enjoyed level16 a lot.
+I personally thought this level wasn't that hard compared to level14 and level16 and you could learn a lot of stuff in level 17. I personally enjoyed level17 a lot.
