--- a/19/19.md
+++ b/19/19.md
@@ -122,7 +122,77 @@ india.wav: RIFF (little-endian) data, WAVE audio, Microsoft PCM, 16 bit, mono 11
 Let's check the india.wav file out.
 
 
-<audio controls>
-    <source src="https://raw.githubusercontent.com/hwkim301/pythonchallenge/blob/main/19/india.wav" type="audio/wav">
-    <a href="https://raw.githubusercontent.github.com/hwkim301/pythonchallenge/blob/main/19/india.wav"> </a>
-</audio>
+It says **sorry**.
+
+
+Changing the URL to http://www.butter:fly@pythonchallenge.com/pc/hex/sorry.html shows this.
+
+
+```
+- "what are you apologizing for?"
+```
+
+So sorry isn't the answer. 
+
+
+Let's go back to the [image](/19/map.jpg).
+
+
+By convention maps are drawn like **[this](https://c8.alamy.com/comp/2SY06WF/illustration-andhra-pradesh-location-map-india-asia-2SY06WF.jpg)**, usually the sea is colored blue and the land is colored in green, brown or etc, but our image is colored in the opposite way. 
+
+
+The land is blue and the sea is brown, it's also the map of India. 
+
+
+I'm taking a wild guess but maybe the level wants us to change the endianness. Maybe it's a pun on India, it does sound similar to **[endianness](https://en.wikipedia.org/wiki/Endianness)**.
+
+
+Little-endian is predominantly used x86(Windows...), ARM(Macbooks...) ...etc
+
+
+```bash
+file india.wav 
+india.wav: RIFF (little-endian) data, WAVE audio, Microsoft PCM, 16 bit, mono 11025 Hz
+```
+
+
+The wav file is little-endian. Let's try to change it to big-endian.
+
+
+There are many ways to change a little-endian wav file to a big-endian wav file.
+
+
+I think the level wants us to use the built-in **[wave](https://docs.python.org/3/library/wave.html)** module, but I found it to be a bit clunky. 
+
+
+Instead you can install the **[soundfile](https://python-soundfile.readthedocs.io/en/0.13.1/#)** module via pip.
+
+
+I used [soundfile.read](https://python-soundfile.readthedocs.io/en/0.13.1/#soundfile.read) to read the wav file, it returns a tuple. 
+
+
+data the `soundfile.read` returned is a NumPy array that contains the actual audio samples you can think of it has the actual audio. 
+samplerate the `soundfile.read`returned is an integer that represents the sampling rate of the audio file. 
+
+
+[soundfile.write](https://python-soundfile.readthedocs.io/en/0.13.1/#soundfile.write) writes data to a soundfile. The **[soundfile.SoundFile](https://python-soundfile.readthedocs.io/en/0.13.1/#soundfile.SoundFile)** has a **endian** keyword which let's us select the endianness we want we can use that and the `soundfile.write` function to change the endianness of the wav file.
+
+
+The code that does just that is below.
+
+```python
+data,samplerate=soundfile.read("india.wav")
+soundfile.write("new.wav",data,samplerate,endian="big")
+```
+
+
+Let's play the wav file that uses big-endian. 
+
+
+It says `You are an idiot hahahahaha!`, so the answer seems to be **idiot**.
+
+
+Changing the url to **[idiot](http://www.pythonchallenge.com/pc/hex/idiot.html)** shows a picture of **[leo](/19/leopold.jpg)** who is Mozart's dad.
+
+
+Let's click once more and here is level 20. http://www.butter:fly@pythonchallenge.com/pc/hex/idiot2.html. 
