searched for hints online

--- a/19/19.md
+++ b/19/19.md
@@ -144,7 +144,7 @@ By convention maps are drawn like **[this](https://c8.alamy.com/comp/2SY06WF/ill
 The land is blue and the sea is brown, it's also the map of India. 
 
 
-I'm taking a wild guess but maybe the level wants us to change the endianness. Maybe it's a pun on India, it does sound similar to **[endianness](https://en.wikipedia.org/wiki/Endianness)**.
+I couldn't anything so I searched for hints online. The hints told me that level19 wants us to change the endianness. Maybe it's a pun on India, it does sound similar to **[endianness](https://en.wikipedia.org/wiki/Endianness)**.
 
 
 Little-endian is predominantly used x86(Windows...), ARM(Macbooks...) ...etc
