level21 full solution

--- a/21/21.md
+++ b/21/21.md
@@ -59,8 +59,8 @@ The `'\x'` used in the byte-string are used for escaping characters.
 Now we can finally ascertain that `package.pack` is a default compressed zlib file.
 
 
-Then I tried decompressing  `package.pack` which also gave me binary data that started with `b\x\x9c`.
-
+Then I tried decompressing  `package.pack` which also gave me binary data that started with `b\x\x9c`. Python has a built-in **[zilb](https://docs.python.org/3/library/zlib.html)** module. For decompressing zlib files I used [zlib.decompress](https://docs.python.org/3/library/zlib.html#zlib.decompress).
+ 
 
 ```python
 output = zlib.decompress(content)
@@ -203,3 +203,132 @@ b'sgol ruoy ta kool'[::-1]
 
 
 When reversing the string it says to look at my logs. What am I supposed to do now.
+
+
+Let's try printing characters when `package.pack` is a zlib file, a bzip file or neither(reversed).
+
+
+```python
+import zlib
+import bz2
+
+
+with open("package.pack", "rb") as f:
+    content = f.read()
+
+logs=""
+
+while True:
+    try:
+        data = zlib.decompress(content)
+        content = data
+        print("z",end=" ")
+    except zlib.error:
+        try:
+            data = bz2.decompress(content)
+            content = data
+            print("b",end=" ")
+        except OSError:
+            try:
+                data = zlib.decompress(content[::-1])
+                content = data
+                print("r")
+            except zlib.error:
+                try:
+                    data = bz2.decompress(content[::-1])
+                    content = data
+                except OSError:
+                    break
+```
+
+
+Here's the output.
+
+
+```
+z z z z z z b b b z z z z z z z z z z b b b z z z z z z b b b b b b b b z z z z b b b b b b b b z z z z b b b b b b b b b b z z b b b b b b b b r
+z z z b b b b b b b z z z z z z b b b b b b b z z z z b b b b b b b b b z z z b b b b b b b b b z z z b b b b b b b b b z z z b b b b b b b b b r
+z z b b z z z z z b b z z z z b b z z z z z b b z z z b b z z z z z z b b z z b b z z z z z z b b z z b b z z z z z z z z z z b b z z z z z z b b r
+z b b z z z z z z z z z z z b b z z z z z z z b b z z b b z z z z z z b b z z b b z z z z z z b b z z b b z z z z z z z z z z b b z z z z z z b b r
+z b b z z z z z z z z z z z b b z z z z z z z b b z z b b b b b b b b b z z z b b b b b b b b b z z z b b b b b b b b z z z z b b b b b b b b b r
+z b b z z z z z z z z z z z b b z z z z z z z b b z z b b b b b b b b z z z z b b b b b b b b z z z z b b b b b b b b z z z z b b b b b b b b z r
+z b b z z z z z z z z z z z b b z z z z z z z b b z z b b z z z z z z z z z z b b z z z z z z z z z z b b z z z z z z z z z z b b z z z b b z r
+z z b b z z z z z b b z z z z b b z z z z z b b z z z b b z z z z z z z z z ![alt text](image.png)z b b z z z z z z z z z z b b z z z z z z z z z z b b z z z z b b z r
+z z z b b b b b b b z z z z z z b b b b b b b z z z z b b z z z z z z z z z z b b z z z z z z z z z z b b b b b b b b b z z z b b z z z z z b b z r
+z z z z z b b b z z z z z z z z z z b b b z z z z z z b b z z z z z z z z z z b b z z z z z z z z z z b b b b b b b b b b z z b b z z z 
+```
+
+
+It looks like crap, but if you zoom out on the output the result looks like **[this](/19/copper.png)**.
+
+
+Now that we know the result is **copper**. 
+
+
+Let's try cleaning the code so it only prints the word **copper**. 
+
+
+
+I modified the code so we don't have to zoom out to see the word copper. 
+
+
+Here's the final code. 
+
+
+```python
+import zlib
+import bz2
+
+
+with open("package.pack", "rb") as f:
+    content = f.read()
+
+copper=""
+while True:
+    try:
+        data = zlib.decompress(content)
+        content = data
+        copper+=" "
+    except zlib.error:
+        try:
+            data = bz2.decompress(content)
+            content = data
+            copper+="#"
+        except OSError:
+            try:
+                data = zlib.decompress(content[::-1])
+                content = data
+                copper+="\n"
+            except zlib.error:
+                try:
+                    data = bz2.decompress(content[::-1])
+                    content = data
+                except OSError:
+                    break
+
+print(copper)
+```
+
+
+The cleaned up `copper` looks like this. BTW concatenating strings in Python isn't a good practice I used it because that was the only way I could print copper neatly, if anyone has a better method please tell me. 
+
+
+```
+   #######      #######    #########   #########   #########   #########
+  ##     ##    ##     ##   ##      ##  ##      ##  ##          ##      ##
+ ##           ##       ##  ##      ##  ##      ##  ##          ##      ##
+ ##           ##       ##  #########   #########   ########    #########
+ ##           ##       ##  ########    ########    ########    ######## 
+ ##           ##       ##  ##          ##          ##          ##   ## 
+  ##     ##    ##     ##   ##          ##          ##          ##    ## 
+   #######      #######    ##          ##          #########   ##     ## 
+     ###          ###      ##          ##          ##########  ##      ##
+```
+
+
+
+Now that we've taken care of everything let's change the url to http://www.butter:fly@pythonchallenge.com/pc/hex/copper.html.
+
+
+
+We're on level22. Man that was a lot ...
