--- a/21/21.md
+++ b/21/21.md
@@ -1,6 +1,6 @@
 # Level 21
 
-**[zlib]** doesn't have a file extension unlike gzip or bzip, so you won't need to change the filename.
+**[zlib](https://en.wikipedia.org/wiki/Zlib)** doesn't have a file extension unlike gzip or bzip, so you won't need to change the filename.
 
 
 First let's try checking what's inside the file.
