changed works to make sense

--- a/21/21.md
+++ b/21/21.md
@@ -24,13 +24,10 @@ with open("package.pack", "rb") as f:
 It gave me a whole bunch of byte strings so I checked the first 30 bytes to see if there if I could recognize a file header. 
 
 
-Nothing really special after searching online for a bit, zlib's default compressions file headers are `0x78, 0x9c`. I can't find the `0x78` but we can spot the `\x9c` in `package.pack`.
+Nothing really special. After searching online for a bit, zlib's default compressions file headers are `0x78, 0x9c`. I can't find the `0x78` but we can spot the `\x9c` in `package.pack`.
 
 
-Let's try checking the 2 starting bytes of the byte-string. It looks like it matches the zlib file header explained **[here](https://stackoverflow.com/questions/9050260/what-does-a-zlib-header-look-like)**.
-
-
-According to the file headers , `package.pack` is a default compressed zlib file.
+Let's try checking the 2 starting bytes of the byte-string.
 
 
 When indexing byte-strings, Python will return the integer value of that specific byte. 
@@ -56,7 +53,10 @@ b'\x9c'.hex() # 0x9c
 The `'\x'` used in the byte-string are used for escaping characters. 
 
 
-Now we can finally ascertain that `package.pack` is a default compressed zlib file.
+It looks like it matches the zlib file header explained **[here](https://stackoverflow.com/questions/9050260/what-does-a-zlib-header-look-like)**.
+
+
+Now we can finally ascertain that `package.pack` is a default compressed zlib file.  
 
 
 Then I tried decompressing  `package.pack` which also gave me binary data that started with `b\x\x9c`. Python has a built-in **[zilb](https://docs.python.org/3/library/zlib.html)** module. For decompressing zlib files I used [zlib.decompress](https://docs.python.org/3/library/zlib.html#zlib.decompress).
