--- a/21/21.md
+++ b/21/21.md
@@ -141,7 +141,7 @@ b'\x80\x8d\x96\xcb\xb5r\xa7\x00\x06Xz\xdafO\x19\xee\x84k\xa4dAB\xe1\x14\xc9]\xfc
 Now I'm stuck again. what should I do lol... 
 
 
-I remember the `readme.txt` file said this **When I had no idea what to do, I looked backwards.** 
+Then I remembered that the `readme.txt` file said this **When I had no idea what to do, I looked backwards.** 
 
 
 Let's try inspecting the bytes backwards. 
