--- a/21/21.md
+++ b/21/21.md
@@ -42,7 +42,7 @@ hex(start[1]) # 0x9c
 You still might have a confusion on how `b'x\x9c'` returns 0x78 and 0x9c when using `hex`.
 
 
-`b'x\x9c'` is made up of two bytes. `b'x'` and `b\x9c`. 
+`b'x\x9c'` is made up of two bytes. `b'x'` and `b'\x9c'`. 
 
 ```python
 b'x'.hex() # 0x78 
