--- a/21/21.md
+++ b/21/21.md
@@ -50,7 +50,7 @@ b'\x9c'.hex() # 0x9c
 ```
 
 
-The `'\x'` used in the byte-string are used for escaping characters. 
+The `'\x'` used in the byte-string are used for representing hexadecimal characters. Python uses `'\x'` to enable escape sequences.
 
 
 It looks like it matches the zlib file header explained **[here](https://stackoverflow.com/questions/9050260/what-does-a-zlib-header-look-like)**.
