fixed order of words

--- a/21/21.md
+++ b/21/21.md
@@ -193,7 +193,7 @@ print(data) # b'sgol ruoy ta kool'
 ```
 
 
-This is what we get `b'sgol ruoy ta kool'`. I can't read it lol, we should probably reverse it as well. 
+`b'sgol ruoy ta kool'` is the result. I can't read it lol, we should probably reverse it as well. 
 
 
 ```python
