--- a/21/21.md
+++ b/21/21.md
@@ -99,7 +99,7 @@ while True:
 ```
 
 
-Decompressing until it's not a zlib files will give you a bzip file. You can tell that it's a zlib file with the file header `BZh91AY` as we've experienced before back in level8.
+Decompressing until it's not a zlib file will give you a bzip file. You can tell that it's a zlib file with the file header `BZh91AY` as we've experienced before back in level8.
 
 
 ```python
@@ -154,7 +154,7 @@ I reversed the string and selected the first 30 bytes. Here's what we get.
 print(data[::-1][:30]) # b'x\x9c\x00\x0c@\xf3\xbfx\x9c\x00\x05@\xfa\xbfx\x9c\x00\x05@\xfa\xbfx\x9c\x84\xb7UT\x1c\xbe\x17'
 ```
 
-Hey it looks like a zlip file again!. The zlib file header we saw before `b'x\x9c` is at the start of the reversed byte-string. 
+Hey it looks like a zlib file again!. The zlib file header we saw before `b'x\x9c` is at the start of the reversed byte-string. 
 
 
 So we can probably deflate it it's a zlib file or a bzip file or reverse the bytes if it's neither of them.
