--- a/21/21.md
+++ b/21/21.md
@@ -157,7 +157,7 @@ print(data[::-1][:30]) # b'x\x9c\x00\x0c@\xf3\xbfx\x9c\x00\x05@\xfa\xbfx\x9c\x00
 Hey it looks like a zlib file again!. The zlib file header we saw before `b'x\x9c` is at the start of the reversed byte-string. 
 
 
-So we can probably deflate it it's a zlib file or a bzip file or reverse the bytes if it's neither of them.
+So we can probably deflate it if it's a zlib file or a bzip file or reverse the bytes if it's neither of them.
 
 
 Here's the code that I wrote. 
