got rid of copper.png

--- a/21/21.md
+++ b/21/21.md
@@ -258,7 +258,7 @@ z z z z z b b b z z z z z z z z z z b b b z z z z z z b b z z z z z z z z z z b 
 ```
 
 
-It looks like crap, but if you zoom out on the output the result looks like **[this](/21/copper.png)**.
+It looks like crap, but if you zoom out on the output the result looks like the word **copper**. 
 
 
 Now that we know the result is **copper**. 
