added some links

--- a/23/23.md
+++ b/23/23.md
@@ -167,7 +167,7 @@ There's a nice post on reddit about what we just did **[here](https://www.reddit
 So that means `'va gur snpr bs jung?'` rot13 decrypting the string in the page source will probably gives the answer. 
 
 
-The built-in **[codecs]** module has an rot13 decoder.
+The built-in **[codecs](https://docs.python.org/3/library/codecs.html)** module has an [rot13](https://docs.python.org/3/library/codecs.html#text-transforms) decoder.
 
 ```python
 import codecs 
