added links for enumerate

--- a/29/29.md
+++ b/29/29.md
@@ -124,7 +124,7 @@ print(res.text.splitlines())
 Using `str.splitlines` to split the response will make it conspicuous. We probably don't need html tags. 
 
 
-Using `enumerate` will tell you the index where the html tag ends. Index 12 is where the actual data other than the html tags start.
+Using **[enumerate](https://docs.python.org/3/library/functions.html#enumerate)** will tell you the index where the html tag ends. Index 12 is where the actual data other than the html tags start.
 
 ```python
 for idx, value in enumerate(res.text.splitlines()):
