fix broken links

--- a/33/33.md
+++ b/33/33.md
@@ -1,7 +1,7 @@
 # Level33
 
 
-**[beer1.jpg](/pythonchallenge/33/beer1.jpg)** A picture of a Jack Daniel's beer stand is given.
+**[beer1.jpg](beer1.jpg)** A picture of a Jack Daniel's beer stand is given.
 
 The HTML title is `33 bottles of beer on the wall`.
 
@@ -24,13 +24,13 @@ another truth at you will glare.
 Not really sure what it means, but I guess we have to manipulate the brightness of the image. 
 
 
-Since the tite of the image is `beer1.jpg` let's check out **[beer2.jpg](/pythonchallenge/33/beer2.jpg)** as well.
+Since the tite of the image is `beer1.jpg` let's check out **[beer2.jpg](beer2.jpg)** as well.
 
 
 It tells us it's a png file.
 
 
-Here's what **[beer2.jpg](/pythonchallenge/33/beer2.png)** looks like. 
+Here's what **[beer2.jpg](beer2.png)** looks like. 
 
 
 There doesn't seem to be any important comments in the page source for `beer2.jpg`.
@@ -58,4 +58,13 @@ Changing the URL to **[gremlins](www.kohsamui:thailand@pythonchallenge.com/pc/ro
 You've now completed the pythonchallenge. 
 
 
+# References 
 
+I could find only 2 people who solved each and every problem from pythonchallenge 
+
+They both seem to Chinese, what a coincidence that's why a lot of skilled programmers are Chinese lol
+
+
+1.  https://www.cnblogs.com/nicole-zhang/p/15649071.html
+
+2.  https://www.hackingnote.com/en/python-challenge-solutions/level-33/ 
