added some more comments

--- a/33/33.md
+++ b/33/33.md
@@ -49,7 +49,20 @@ print(img.size)  # (138,138)
 
 `beer2.jpg` is a square image that has a width and height of `138`.
 
-It's also an 
+It's also a luminous image(#L), basically it's black and white. 
+
+For luminous images the pixel values range from `0~255`.
+
+
+There's a nice detailed explanation **[here](https://stackoverflow.com/questions/52307290/what-is-the-difference-between-images-in-p-and-l-mode-in-pil)**
+
+
+on what the `'L'` mode in PIL means. 
+
+Feel free to read **[this]**(https://pillow.readthedocs.io/en/stable/handbook/concepts.html#modes) as well. 
+
+
+Now that we checked out what `beer2.jpg` looks like, let's try mangling the pixels in the image. 
 
 
 Changing the URL to **[gremlins](www.kohsamui:thailand@pythonchallenge.com/pc/rock/gremlins.html)** takes you to the end.
