fixed links again

--- a/33/33.md
+++ b/33/33.md
@@ -59,7 +59,7 @@ There's a nice detailed explanation **[here](https://stackoverflow.com/questions
 
 on what the `'L'` mode in PIL means. 
 
-Feel free to read **[this]**(https://pillow.readthedocs.io/en/stable/handbook/concepts.html#modes) as well. 
+Feel free to read **[this](https://pillow.readthedocs.io/en/stable/handbook/concepts.html#modes)** as well. 
 
 
 Now that we checked out what `beer2.jpg` looks like, let's try mangling the pixels in the image. 
